samples/_failures_safe/1761317943_569e72_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_0d745d92.c: In function ‘dijkstra’:
./samples/SAFE/__tmp_0d745d92.c:157: error: expected ‘;’ at end of input
./samples/SAFE/__tmp_0d745d92.c:156:21: error: expected declaration or statement at end of input
  156 |                     if (new_dist < 0) new_dist = INT_MAX
      |                     ^~
./samples/SAFE/__tmp_0d745d92.c:156:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_0d745d92.c:156:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_0d745d92.c:156:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_0d745d92.c:156:21: error: expected declaration or statement at end of input
